--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.17",
     "lucide-react": "^0.554.0",
+    "mysql2": "^3.15.3",
     "next": "16.0.3",
     "postcss": "^8.5.6",
     "react": "19.2.0",
