--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.17",
+    "better-sqlite3": "^12.5.0",
     "lucide-react": "^0.554.0",
     "mysql2": "^3.15.3",
     "next": "16.0.3",
@@ -18,6 +19,7 @@
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
