--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mysql2": "^3.15.3",
     "next": "16.0.7",
     "nprogress": "^0.2.0",
+    "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -20,9 +21,9 @@
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/nprogress": "^0.2.3",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.22",
