--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/postcss": "^4.1.17",
     "lucide-react": "^0.554.0",
     "mysql2": "^3.15.3",
@@ -17,8 +18,10 @@
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.69.0",
     "swr": "^2.3.7",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
