--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/postcss": "^4.1.17",
+    "clipboard-copy": "^4.0.1",
     "lucide-react": "^0.554.0",
     "mysql2": "^3.15.3",
     "next": "16.0.7",
