--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mysql2": "^3.15.3",
     "next": "16.0.7",
     "nprogress": "^0.2.0",
+    "papaparse": "^5.5.3",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "react": "19.2.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/nprogress": "^0.2.3",
+    "@types/papaparse": "^5.5.2",
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
