--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
     "clipboard-copy": "^4.0.1",
     "lucide-react": "^0.554.0",
     "mysql2": "^3.15.3",
     "next": "16.0.7",
+    "next-auth": "^4.24.13",
     "nprogress": "^0.2.0",
     "papaparse": "^5.5.3",
     "pg": "^8.16.3",
@@ -21,6 +24,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.69.0",
+    "resend": "^6.8.0",
     "swr": "^2.3.7",
     "tailwindcss": "^4.1.17",
     "zod": "^4.2.1"
