--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "resend": "^6.8.0",
     "swr": "^2.3.7",
     "tailwindcss": "^4.1.17",
-    "zod": "^4.2.1"
+    "zod": "^4.2.1",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@types/node": "^20",
