--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql2": "^3.15.3",
     "next": "16.0.7",
     "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.13",
     "nprogress": "^0.2.0",
     "papaparse": "^5.5.3",
     "pg": "^8.16.3",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.9",
     "@types/nprogress": "^0.2.3",
     "@types/papaparse": "^5.5.2",
     "@types/pg": "^8.16.0",
