--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clipboard-copy": "^4.0.1",
     "lucide-react": "^0.554.0",
     "mysql2": "^3.15.3",
-    "next": "16.0.7",
+    "next": "^16.1.6",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.13",
     "nprogress": "^0.2.0",
