--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
+    "chart.js": "^4.5.1",
     "clipboard-copy": "^4.0.1",
     "lucide-react": "^0.554.0",
     "mysql2": "^3.15.3",
@@ -23,6 +24,7 @@
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "react": "19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.69.0",
     "resend": "^6.8.0",
